src/App.css
#app {
  margin: 0;
  padding: 0;
  display: flex;
  flex-shrink: 1;
  flex-direction: column;
}

@media (max-width: 700px) {
  #app {
      margin: 0;
      padding: 0;
      display: flex;
      flex-shrink: 1;
  }
}

.App div[class="main-grid"] {
  display: flex;
  flex-grow: 1;
}

.main-grid #canvas {
  background: url("./assets/8bitbg.png") repeat;
}

.bottom-panel {
  display: flex;
  position: absolute;
  width: 100vw;
  bottom: 0;
  padding-left: 2%;
  padding-right: 2%;
  align-items: center;
  justify-content: center;
  background-color: black;
}

.tool-panel {
  display: flex;
  width: 20vw;
  align-items: center;
  flex-wrap: nowrap;
  justify-content: space-evenly;
  background-color: white;
  padding: 10px;
  margin: 5px;
}

.tool-items label[class="tool-label"] {
  padding-left: 15px;
  padding-right: 15px;
}

div[class="tool-items"] label[id='tool'] {
	display: inline-block;
	position: relative;
  text-decoration: none;
}
div[class="tool-items"] label[id='tool'][data-tooltip]::after {
	content: attr(data-tooltip);
	position: absolute;
	bottom: 130%;
	left: 20%;
	background: #ffcb66;
  padding: 5px 15px;
  margin-bottom: 8px;
	color: black;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	-ms-border-radius: 10px;
	-o-border-radius: 10px;
	border-radius: 10px;
	white-space: nowrap;
	opacity: 0;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	-ms-transition: all 0.5s ease;
	-o-transition: all 0.5s ease;
	transition: all 0.5s ease;
}
div[class="tool-items"] label[id='tool'][data-tooltip]::before {
	content: "";
	position: absolute;
	width: 0;
	height: 0;
	border-top: 20px solid #ffcb66;
	border-left: 20px solid transparent;
  border-right: 20px solid transparent;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	-ms-transition: all 0.5s ease;
	-o-transition: all 0.5s ease;
	transition: all 0.5s ease;
	opacity: 0;
  bottom: 115%;
}
div[class="tool-items"] label[id='tool'][data-tooltip]:hover::after {
	bottom: 100%;
}
div[class="tool-items"] label[id='tool'][data-tooltip]:hover::before {
	bottom: 100%;
}
div[class="tool-items"] label[id='tool'][data-tooltip]:hover::after,
div[class="tool-items"] label[id='tool'][data-tooltip]:hover::before {
  transition-delay:1s;
	opacity: 1;
}

.custom-panel {
  display: flex;
  align-items: center;
  justify-content: space-around;
  background-color: white;
  padding: 10px;
  margin: 5px;
  margin-left: 2%;
}

@media (max-width: 700px) {
    .bottom-panel {
        display: flex;
        position: absolute;
        left: 0;
        flex-direction: column;
        height: 100vh;
        width: 20vw;
        align-items: center;
        justify-content: center;
        background-color: black;
    }
    .tool-panel {
        display: flex;
        width: 50px;
        height: 30vh;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background-color: white;
    }
    .tool-items label {
      display: flex;
      justify-content: center;
      margin: 20px;
    }
    .custom-panel {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: space-around;
      background-color: white;
      padding: 10px;
      margin: 5px;
      margin-top: 20%;
    }
    div.remove {
      margin-top: 20%;
    }
}

[type=radio] {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

[type=radio] + img {
  background-color:rgb(255, 255, 255, 0.5);
}

[type=radio]:checked + img {
  border: 2px dotted;
  width: 26px;
  height: 26px;
  border-radius: 0%;
}

div.remove {
  margin-left: 2%;
}
.icon-btn {
  width: 50px;
  height: 50px;
  border: 1px solid #cdcdcd;
  background: white;
  border-radius: 25px;
  overflow: hidden;
  position: relative;
  transition: width 0.2s ease-in-out;
}
.add-btn:hover {
  width: 120px;
}
.add-btn::before,
.add-btn::after {
  transition: width 0.2s ease-in-out, border-radius 0.2s ease-in-out;
  content: "";
  position: absolute;
  height: 4px;
  width: 10px;
  top: calc(50% - 2px);
  background: red;
}
.add-btn::after {
  right: 14px;
  overflow: hidden;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}
.add-btn::before {
  left: 14px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}
.icon-btn:focus {
  outline: none;
}
.btn-txt {
  opacity: 0;
  transition: opacity 0.2s;
}
.add-btn:hover::before,
.add-btn:hover::after {
  width: 4px;
  border-radius: 2px;
}
.add-btn:hover .btn-txt {
  opacity: 1;
}
.add-icon::after,
.add-icon::before {
  transition: all 0.2s ease-in-out;
  content: "";
  position: absolute;
  height: 20px;
  width: 2px;
  top: calc(50% - 10px);
  background: red;
  overflow: hidden;
}
.add-icon::before {
  left: 22px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}
.add-icon::after {
  right: 22px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}
.add-btn:hover .add-icon::before {
  left: 15px;
  height: 4px;
  top: calc(50% - 2px);
}
.add-btn:hover .add-icon::after {
  right: 15px;
  height: 4px;
  top: calc(50% - 2px);
}

